# discord-fix-gui

./: .gitignore  Cargo.toml  README.md  README_RU.md  Tauri.toml
icons/: icon.icns
src/: build.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  prelude.rs  tray.rs
src/runner/: mod.rs  runner.rs
ui/scripts/js/: main.js
ui/scripts/jsm/: main.js
ui/scripts/jsm/modules/: base.js  form.js  node.js
ui/styles/css/: main.css
ui/styles/scss/: main.scss
ui/styles/scss/modules/: _slider.scss  base.scss  fonts.scss  form.scss  reset.scss  scroll.scss
ui/views/: main.html
