[package]
name = "discord-fix-gui"
edition = "2024"
build = "src/build.rs"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = ["config-toml"] }
grass = "0.13.4"
regex = "1.11.1"

[dependencies]
macron = { version = "0.1.7", features = ["derive", "path", "string", "collections"] }
tauri = { version = "2.0.3", features = ["config-toml", "tray-icon", "image-ico"] }
tauri-plugin-prevent-default = "2.1.1"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
chrono = { version = "0.4.41", features = ["alloc", "clock"] }
log = "0.4"
rand = "0.8.5"
regex = "1.11.1"
